# python-intro

./: .flake8  README.md  pyproject.toml
app/: Home.py
app/pages/: 1_Prototype.py  2_Compressor_Model_Details.py
app/pages/textfiles/: 2_compressor_explained.md  2_explained.md  2_intro.md  2_nlp_intuition.md
bootstrap/: bash-pyenv-profile.sh  bash-pyenv-win-profile.sh  zsh-pyenv-profile.sh
notebooks/: 00_prototype.ipynb
src/python_intro/: app_functions.py  dpaths.py
